Fix visibility of postal address

--- a/src/client/view/components/contact/ContactContent.scss
+++ b/src/client/view/components/contact/ContactContent.scss
@@ -16,8 +16,9 @@
     }
     >.postal-address {
         opacity: 0;
-        transition: opacity 1s;
+        margin-top: 20px;
         &.visible {
+            transition: opacity 1s;
             opacity: 1;
         }
     }
